--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "pixi.js": "^5.1.5",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "web-api-hooks": "^2.2.2"
   },
   "devDependencies": {
     "@types/node": "12.0.12",
