--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
     "strict": true,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitAny": false,
     "removeComments": false,
     "preserveConstEnums": true,
