--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "web-api-hooks": "^2.2.2"
   },
   "devDependencies": {
+    "@types/matter-js": "^0.10.4",
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
-    "@types/matter-js": "^0.10.4",
     "@types/react-dom": "16.8.4",
     "@types/styled-components": "4.1.16",
     "babel-plugin-styled-components": "^1.10.0",
-    "typescript": "3.5.2"
+    "typescript": "^3.7.2"
   },
   "license": "ISC"
 }
