--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-typescript-styled-components",
+  "name": "quorum-sensing",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -7,25 +7,25 @@
     "start": "next start"
   },
   "dependencies": {
-    "@inlet/react-pixi": "^1.1.6",
-    "framer-motion": "^1.6.15",
+    "@inlet/react-pixi": "^1.2.0",
+    "framer-motion": "^1.8.4",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.14.2",
-    "next": "latest",
-    "pixi.js": "^5.1.5",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "styled-components": "^4.1.3",
+    "next": "^9.2.2",
+    "pixi.js": "^5.2.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.0.1",
     "web-api-hooks": "^2.2.2"
   },
   "devDependencies": {
-    "@types/matter-js": "^0.10.4",
-    "@types/node": "12.0.12",
-    "@types/react": "16.8.23",
-    "@types/react-dom": "16.8.4",
-    "@types/styled-components": "4.1.16",
-    "babel-plugin-styled-components": "^1.10.0",
-    "typescript": "^3.7.2"
+    "@types/matter-js": "^0.10.9",
+    "@types/node": "^13.7.4",
+    "@types/react": "^16.9.21",
+    "@types/react-dom": "^16.9.5",
+    "@types/styled-components": "^5.0.0",
+    "babel-plugin-styled-components": "^1.10.7",
+    "typescript": "^3.8.2"
   },
   "license": "ISC"
 }
